U6007 unlockable content - fixing code smells - made purchase message not move the page